@@ -103,3 +103,15 @@ get_connect_string() {
 function toLowerCase() {
   echo "$1" | tr '[:upper:]' '[:lower:]'
 }
+
+#some env settings SQLCL needs
+export NLS_LANG="GERMAN_GERMANY.AL32UTF8"
+export NLS_DATE_FORMAT="DD.MM.YYYY HH24:MI:SS"
+export JAVA_TOOL_OPTIONS="-Duser.language=en -Duser.region=US -Dfile.encoding=UTF-8"
+export CUSTOM_JDBC="-XX:+TieredCompilation -XX:TieredStopAtLevel=1 -Xverify:none"
+export LANG="de_DE.utf8"
+case $(uname | tr '[:upper:]' '[:lower:]') in
+mingw64_nt-10*)
+  chcp.com 65001
+;;
+esac
